--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,17 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-       - image: circleci/ruby:2.4.1-node-browsers
+       - image: circleci/ruby:2.3-node
+        environment:
+          PGHOST: 127.0.0.1
+          PGUSER: akash
+          RAILS_ENV: test
+       - image: circleci/postgres:9.5-alpine
+        environment:
+          POSTGRES_USER: postgres
+          POSTGRES_DB: leave_development
+          POSTGRES_PASSWORD: "akash"
+        
       
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
